--- a/app.json
+++ b/app.json
@@ -6,15 +6,15 @@
     "env": {
       "LINE_CHANNEL_ACCESS_TOKEN": {
         "description": "Messaging API の Channel Access Tokenを指定してください。",
-        "required": "true"
+        "required": true
       },
       "BOT_MODE": {
         "description": "DOCOMOの雑談対話APIを使用する場合には「DOCOMO」を設定してください。",
-        "required": "false"
+        "required": false
       },
       "DOCOMO_CHAT_API_KEY": {
         "description": "DOCOMOの雑談対話APIを使用するために必要なAPI Keyを設定してください。",
-        "required": "false"
+        "required": false
       }
     },
     "addons": [
